chore: added mcp server plugin to game

--- a/games/unreal/magisterka/Saved/Config/LinuxEditor/EditorPerProjectUserSettings.ini
+++ b/games/unreal/magisterka/Saved/Config/LinuxEditor/EditorPerProjectUserSettings.ini
@@ -1349,7 +1349,7 @@ SlateFileDialogs.TimeStamp=2025.02.05-21.36.32
 SlateFileDialogs.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
 
 [PluginBrowser]
