chore: rebuild mcp plugin

--- a/games/unreal/magisterka/Saved/Config/LinuxEditor/EditorPerProjectUserSettings.ini
+++ b/games/unreal/magisterka/Saved/Config/LinuxEditor/EditorPerProjectUserSettings.ini
@@ -169,8 +169,8 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 LastLevel=/Engine/Maps/Templates/OpenWorld
 
 [ModuleFileTracking]
-magisterka.TimeStamp=2025.11.06-19.38.00
-magisterka.LastCompileMethod=Unknown
+magisterka.TimeStamp=2025.11.06-20.05.13
+magisterka.LastCompileMethod=External
 StorageServerClient.TimeStamp=2025.02.05-21.35.34
 StorageServerClient.LastCompileMethod=Unknown
 CookOnTheFly.TimeStamp=2025.02.05-21.35.20
@@ -1359,9 +1359,14 @@ InstalledPlugins=WMFCodecs
 [DetailCategories]
 NewPluginDescriptorData.Descriptor Data=True
 PluginPaths_External.Plugin Directories=True
+PluginMetadataObject.Icon=True
+PluginMetadataObject.Details=True
+PluginMetadataObject.Dependencies=True
 
 [DetailPropertyExpansion]
 PluginPaths_External="\"Struct.AdditionalPluginDirectories\" "
+PluginMetadataObject="\"Object.Dependencies.Plugins\" "
+Object="\"Object.Dependencies.Plugins\" "
 
 [RootWindow]
 ScreenPosition=X=3840.000 Y=0.000
