chore: code for schmup in unreal

--- a/games/unreal/magisterka/Config/DefaultGame.ini
+++ b/games/unreal/magisterka/Config/DefaultGame.ini
@@ -1,3 +1,8 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=2C34EDE0F5BC4D6BB55E5DD6D81E3BB9
+
+[/Script/Engine.GameMapsSettings]
+GameDefaultMap=/Engine/Maps/Entry
+EditorStartupMap=/Engine/Maps/Entry
+GlobalDefaultGameMode=/Script/magisterka.ShootEmUpGameMode
