--- a/games/unreal/magisterka/Config/DefaultInput.ini
+++ b/games/unreal/magisterka/Config/DefaultInput.ini
@@ -81,4 +81,17 @@ DefaultInputComponentClass=/Script/EnhancedInput.EnhancedInputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 -ConsoleKeys=Tilde
 +ConsoleKeys=Tilde
++ActionMappings=(ActionName="Fire",Key=Z,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Fire",Key=LeftMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Special",Key=SpaceBar,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++AxisMappings=(AxisName="MoveForward",Key=W,Scale=1.000000)
++AxisMappings=(AxisName="MoveForward",Key=S,Scale=-1.000000)
++AxisMappings=(AxisName="MoveForward",Key=Up,Scale=1.000000)
++AxisMappings=(AxisName="MoveForward",Key=Down,Scale=-1.000000)
++AxisMappings=(AxisName="MoveRight",Key=D,Scale=1.000000)
++AxisMappings=(AxisName="MoveRight",Key=A,Scale=-1.000000)
++AxisMappings=(AxisName="MoveRight",Key=Right,Scale=1.000000)
++AxisMappings=(AxisName="MoveRight",Key=Left,Scale=-1.000000)
++AxisMappings=(AxisName="MoveForward",Key=Gamepad_LeftY,Scale=1.000000)
++AxisMappings=(AxisName="MoveRight",Key=Gamepad_LeftX,Scale=1.000000)
 
