feat: finish part 2/9 split manual into parts

--- a/games/unreal/BulletHellGame/BulletHellGame/Saved/Config/LinuxEditor/EditorPerProjectUserSettings.ini
+++ b/games/unreal/BulletHellGame/BulletHellGame/Saved/Config/LinuxEditor/EditorPerProjectUserSettings.ini
@@ -393,6 +393,8 @@ K2Node_VariableGet=CameraComponent.CameraSettings.Overscan,CameraComponent.PostP
 K2Node_EnhancedInputAction=CameraComponent.CameraSettings.Overscan,CameraComponent.PostProcess.Lens
 K2Node_VariableSet=CameraComponent.CameraSettings.Overscan,CameraComponent.PostProcess.Lens
 K2Node_GetInputActionValue=CameraComponent.CameraSettings.Overscan,CameraComponent.PostProcess.Lens
+EdGraph=CameraComponent.CameraSettings.Overscan,CameraComponent.PostProcess.Lens
+K2Node_FunctionEntry=CameraComponent.CameraSettings.Overscan,CameraComponent.PostProcess.Lens
 
 [/Script/GraphEditor.GraphEditorSettings]
 DataPinStyle=BPST_VariantA
@@ -684,6 +686,8 @@ InputTriggerTimedBase="\"Object\" "
 InputTriggerHoldAndRelease="\"Object\" "
 InputTriggerTap="\"Object\" "
 InputTriggerPulse="\"Object\" "
+EdGraphNode_Comment="\"Object\" "
+EdGraphNode="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
@@ -1588,6 +1592,14 @@ EdGraph.Graph=True
 EdGraph.Inputs=True
 EdGraph.Outputs=True
 K2Node_CallFunction.Graph=True
+K2Node_FunctionEntry.GraphNodeDetail=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
+K2Node_CallFunction.Inputs=True
+K2Node_CallFunction.Outputs=True
+EdGraphNode_Comment.GraphNodeDetail=True
+EdGraphNode_Comment.Comment=True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -1661,6 +1673,7 @@ PreserveScaleRatio=True
 
 [DetailCategoriesAdvanced]
 InputAction.Action=False
+EdGraph.Graph=True
 
 [AssetEditorToolkitTabLocation]
 /Game/Input/IA_Move.IA_Move=1
