--- a/games/unreal/BulletHellGame/BulletHellGame/Saved/Config/LinuxEditor/EditorPerProjectUserSettings.ini
+++ b/games/unreal/BulletHellGame/BulletHellGame/Saved/Config/LinuxEditor/EditorPerProjectUserSettings.ini
@@ -187,14 +187,14 @@ MRUItem0=/Game/Untitled
 [DetailCustomWidgetExpansion]
 InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/Blueprints/IA_Move.IA_Move,InputMappingContext.Mappings.ActionMappings./Game/Input/IA_Move.IA_Move
 InputAction=
-CameraComponent=CameraComponent.CameraSettings.Overscan,CameraComponent.PostProcess.Lens,CameraComponent.PostProcess.Lens
+CameraComponent=CameraComponent.CameraSettings.Overscan,CameraComponent.PostProcess.Lens
 SceneComponent=
-BP_Player_C=CameraComponent.CameraSettings.Overscan,CameraComponent.PostProcess.Lens
+BP_Player_C=CameraComponent.CameraSettings.Overscan,CameraComponent.PostProcess.Lens,EdGraph.Inputs.277B5E44FBD747478CCE123CD66990D9
 PlayerStart=CameraComponent.CameraSettings.Overscan,CameraComponent.PostProcess.Lens
 CapsuleComponent=CameraComponent.CameraSettings.Overscan,CameraComponent.PostProcess.Lens
 LandscapeStreamingProxy=CameraComponent.CameraSettings.Overscan,CameraComponent.PostProcess.Lens
 PropertyWrapper=CameraComponent.CameraSettings.Overscan,CameraComponent.PostProcess.Lens
-SkyLight=CameraComponent.CameraSettings.Overscan,CameraComponent.PostProcess.Lens,CameraComponent.PostProcess.Lens
+SkyLight=CameraComponent.CameraSettings.Overscan,CameraComponent.PostProcess.Lens
 Landscape=CameraComponent.CameraSettings.Overscan,CameraComponent.PostProcess.Lens
 EditorStyleSettings=EditorStyleSettings.Graphs.Preview,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale,EditorKeyboardShortcutSettings.MainFrame.SwitchProject
 SlateThemeManager=
@@ -389,12 +389,19 @@ TcpMessagingSettings=EditorStyleSettings.Graphs.Preview,EditorKeyboardShortcutSe
 TemplateSequenceEditorSettings=EditorStyleSettings.Graphs.Preview,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale,EditorKeyboardShortcutSettings.MainFrame.SwitchProject,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierSmoothDelta,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap
 UdpMessagingSettings=EditorStyleSettings.Graphs.Preview,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale,EditorKeyboardShortcutSettings.MainFrame.SwitchProject,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierSmoothDelta,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap
 WmfMediaSettings=EditorStyleSettings.Graphs.Preview,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale,EditorKeyboardShortcutSettings.MainFrame.SwitchProject,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierSmoothDelta,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap
-K2Node_VariableGet=CameraComponent.CameraSettings.Overscan,CameraComponent.PostProcess.Lens
+K2Node_VariableGet=CameraComponent.CameraSettings.Overscan,CameraComponent.PostProcess.Lens,EdGraph.Inputs.277B5E44FBD747478CCE123CD66990D9
 K2Node_EnhancedInputAction=CameraComponent.CameraSettings.Overscan,CameraComponent.PostProcess.Lens
 K2Node_VariableSet=CameraComponent.CameraSettings.Overscan,CameraComponent.PostProcess.Lens
 K2Node_GetInputActionValue=CameraComponent.CameraSettings.Overscan,CameraComponent.PostProcess.Lens
-EdGraph=CameraComponent.CameraSettings.Overscan,CameraComponent.PostProcess.Lens
+EdGraph=CameraComponent.CameraSettings.Overscan,CameraComponent.PostProcess.Lens,EdGraph.Inputs.277B5E44FBD747478CCE123CD66990D9
 K2Node_FunctionEntry=CameraComponent.CameraSettings.Overscan,CameraComponent.PostProcess.Lens
+BP_Bullet_C=CameraComponent.CameraSettings.Overscan,CameraComponent.PostProcess.Lens
+StaticMeshComponent=CameraComponent.CameraSettings.Overscan,CameraComponent.PostProcess.Lens
+DefaultPawn=CameraComponent.CameraSettings.Overscan,CameraComponent.PostProcess.Lens
+SphereComponent=CameraComponent.CameraSettings.Overscan,CameraComponent.PostProcess.Lens
+GameModeBase=CameraComponent.CameraSettings.Overscan,CameraComponent.PostProcess.Lens
+BillboardComponent=CameraComponent.CameraSettings.Overscan,CameraComponent.PostProcess.Lens
+Initialize=CameraComponent.CameraSettings.Overscan,CameraComponent.PostProcess.Lens
 
 [/Script/GraphEditor.GraphEditorSettings]
 DataPinStyle=BPST_VariantA
@@ -600,9 +607,9 @@ SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
 PaperSpriteComponent="\"Object\" \"Object.Collision.BodyInstance\" "
 MeshComponent="\"Object\" \"Object.Collision.BodyInstance\" "
-PrimitiveComponent="\"Object\" "
+PrimitiveComponent="\"Object\" \"Object.Collision.BodyInstance\" "
 BoxComponent="\"Object\" \"Object.Collision.BodyInstance\" "
-ShapeComponent="\"Object\" "
+ShapeComponent="\"Object\" \"Object.Collision.BodyInstance\" "
 ArrowComponent="\"Object\" "
 InputAction="\"Object\" "
 DataAsset="\"Object\" "
@@ -688,12 +695,15 @@ InputTriggerTap="\"Object\" "
 InputTriggerPulse="\"Object\" "
 EdGraphNode_Comment="\"Object\" "
 EdGraphNode="\"Object\" "
+SphereComponent="\"Object\" \"Object.Collision.BodyInstance\" "
+BillboardComponent="\"Object\" "
+DefaultPawn="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
-RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
@@ -1600,6 +1610,119 @@ K2Node_CallFunction.Inputs=True
 K2Node_CallFunction.Outputs=True
 EdGraphNode_Comment.GraphNodeDetail=True
 EdGraphNode_Comment.Comment=True
+BP_Bullet_C.Tick=True
+BP_Bullet_C.Replication=True
+BP_Bullet_C.Rendering=True
+BP_Bullet_C.Collision=True
+BP_Bullet_C.Actor=True
+BP_Bullet_C.Input=True
+BP_Bullet_C.HLOD=True
+BP_Bullet_C.Physics=True
+BP_Bullet_C.Events=True
+SphereComponent.Variable=False
+SphereComponent.TransformCommon=False
+SphereComponent.Sockets=False
+SphereComponent.Shape=False
+SphereComponent.Navigation=False
+SphereComponent.HLOD=False
+SphereComponent.ComponentTick=False
+SphereComponent.Rendering=False
+SphereComponent.Physics=False
+SphereComponent.Collision=False
+SphereComponent.Tags=False
+SphereComponent.ComponentReplication=False
+SphereComponent.Cooking=False
+SphereComponent.Events=True
+GameNetworkManager.TransformCommon=True
+GameNetworkManager.Replication=True
+GameNetworkManager.Physics=True
+GameNetworkManager.Networking=True
+GameNetworkManager.Actor=True
+PlayerController.TransformCommon=True
+PlayerController.PlayerController=True
+PlayerController.MouseInterface=True
+PlayerController.Game=True
+PlayerController.Input=True
+PlayerController.WorldPartition=True
+PlayerController.Replication=True
+PlayerController.HLOD=True
+PlayerController.Physics=True
+PlayerController.Networking=True
+PlayerController.Actor=True
+PlayerState.Replication=True
+PlayerState.Physics=True
+PlayerState.Networking=True
+PlayerState.Actor=True
+DefaultPawn.TransformCommon=True
+DefaultPawn.StaticMesh=True
+DefaultPawn.Pawn=True
+DefaultPawn.FloatingPawnMovement=True
+DefaultPawn.NavMovement=True
+DefaultPawn.Velocity=True
+DefaultPawn.Physics=True
+DefaultPawn.Collision=True
+DefaultPawn.PlanarMovement=True
+DefaultPawn.Lighting=True
+DefaultPawn.MovementComponent=True
+DefaultPawn.Tags=True
+DefaultPawn.AssetUserData=True
+DefaultPawn.Rendering=True
+DefaultPawn.Activation=True
+DefaultPawn.Navigation=True
+DefaultPawn.Cooking=True
+DefaultPawn.Shape=True
+DefaultPawn.HLOD=True
+DefaultPawn.Mobile=True
+DefaultPawn.RayTracing=True
+DefaultPawn.Mesh Painting=True
+DefaultPawn.VirtualTexture=True
+DefaultPawn.Camera=True
+DefaultPawn.Replication=True
+DefaultPawn.Networking=True
+DefaultPawn.Input=True
+DefaultPawn.Actor=True
+DefaultPawn.Materials=True
+GameModeBase.Classes=True
+GameModeBase.Game=True
+GameModeBase.GameMode=True
+GameModeBase.Physics=True
+GameModeBase.Networking=True
+GameSession.TransformCommon=True
+GameSession.Replication=True
+GameSession.Physics=True
+GameSession.Networking=True
+GameSession.Actor=True
+SkyAtmosphere.TransformCommon=True
+SkyAtmosphere.Planet=True
+SkyAtmosphere.Atmosphere=True
+SkyAtmosphere.Atmosphere - Rayleigh=True
+SkyAtmosphere.Atmosphere - Mie=True
+SkyAtmosphere.Atmosphere - Absorption=True
+SkyAtmosphere.Art Direction=True
+SkyAtmosphere.Rendering=True
+SkyAtmosphere.Physics=True
+SkyAtmosphere.Tags=True
+SkyAtmosphere.Activation=True
+SkyAtmosphere.Cooking=True
+SkyAtmosphere.Replication=True
+SkyAtmosphere.Networking=True
+SkyAtmosphere.Actor=True
+ExponentialHeightFog.TransformCommon=True
+ExponentialHeightFog.ExponentialHeightFogComponent=True
+ExponentialHeightFog.InscatteringTexture=True
+ExponentialHeightFog.DirectionalInscattering=True
+ExponentialHeightFog.VolumetricFog=True
+ExponentialHeightFog.Rendering=True
+ExponentialHeightFog.Physics=True
+ExponentialHeightFog.Tags=True
+ExponentialHeightFog.Activation=True
+ExponentialHeightFog.Cooking=True
+ExponentialHeightFog.Replication=True
+ExponentialHeightFog.Networking=True
+ExponentialHeightFog.Actor=True
+K2Node_FunctionResult.Graph=True
+K2Node_FunctionResult.Inputs=True
+K2Node_FunctionResult.Outputs=True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -1662,11 +1785,12 @@ CrowdManager=True
 CookerSettings=True
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Blueprints/BP_Player
-MRUItem1=/Game/Input/IMC_Default
-MRUItem2=/Game/Input/IA_Move
-MRUItem3=/Game/Input/IA_Special
-MRUItem4=/Game/Input/IA_Fire
+MRUItem0=/Game/Blueprints/BP_Bullet
+MRUItem1=/Game/Blueprints/BP_Player
+MRUItem2=/Game/Input/IMC_Default
+MRUItem3=/Game/Input/IA_Move
+MRUItem4=/Game/Input/IA_Special
+MRUItem5=/Game/Input/IA_Fire
 
 [SelectionDetails]
 PreserveScaleRatio=True
@@ -1674,6 +1798,7 @@ PreserveScaleRatio=True
 [DetailCategoriesAdvanced]
 InputAction.Action=False
 EdGraph.Graph=True
+PropertyWrapper.Variable=False
 
 [AssetEditorToolkitTabLocation]
 /Game/Input/IA_Move.IA_Move=1
